set(INCLUDE_DIR include)
set(TEST_DIR test)

include_directories(${INCLUDE_DIR})

add_executable(vector_test ${TEST_DIR}/vector_test.cpp)
add_executable(list_test ${TEST_DIR}/list_test.cpp)
add_executable(stack_test ${TEST_DIR}/stack_test.cpp)
add_executable(queue_test ${TEST_DIR}/queue_test.cpp)
add_executable(heap_test ${TEST_DIR}/heap_test.cpp)
add_executable(bs_tree_test ${TEST_DIR}/bs_tree_test.cpp)
add_executable(avl_tree_test ${TEST_DIR}/avl_tree_test.cpp)
add_executable(rb_tree_test ${TEST_DIR}/rb_tree_test.cpp)
add_executable(skip_list_test ${TEST_DIR}/skip_list_test.cpp)
add_executable(hash_table_test ${TEST_DIR}/hash_table_test.cpp)
add_executable(dag_test ${TEST_DIR}/dag_test.cpp)
