add_executable(001 001.cpp)
add_executable(002 002.cpp)
add_executable(003 003.cpp)
add_executable(005 005.cpp)
add_executable(006 006.cpp)
add_executable(007 007.cpp)
add_executable(008 008.cpp)
add_executable(009 009.cpp)
add_executable(011 011.cpp)
add_executable(012 012.cpp)
add_executable(014 014.cpp)
add_executable(015 015.cpp)
add_executable(016 016.cpp)
add_executable(017 017.cpp)
add_executable(018 018.cpp)
add_executable(019 019.cpp)
add_executable(020 020.cpp)
add_executable(021 021.cpp)
add_executable(022 022.cpp)
add_executable(023 023.cpp)
add_executable(024 024.cpp)
add_executable(025 025.cpp)
add_executable(026 026.cpp)
add_executable(027 027.cpp)
add_executable(028 028.cpp)
add_executable(032 032.cpp)
add_executable(045 045.cpp)
add_executable(055 055.cpp)
add_executable(062 062.cpp)
add_executable(063 063.cpp)
add_executable(064 064.cpp)
add_executable(091 091.cpp)
add_executable(110 110.cpp)
add_executable(121 121.cpp)
add_executable(122 122.cpp)
add_executable(123 123.cpp)
add_executable(132 132.cpp)
add_executable(150 150.cpp)
add_executable(188 188.cpp)
add_executable(198 198.cpp)
add_executable(213 213.cpp)
add_executable(256 256.cpp)
add_executable(265 265.cpp)
add_executable(279 279.cpp)
add_executable(300 300.cpp)
add_executable(322 322.cpp)
add_executable(338 338.cpp)
add_executable(354 354.cpp)
add_executable(361 361.cpp)
add_executable(516 516.cpp)
add_executable(674 674.cpp)
add_executable(753 753.cpp)
add_executable(933 933.cpp)
add_executable(994 994.cpp)